--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
       </nav>
     </div>
    </header>
-    <div class="main">
+    <main>
       <p class="notice"><%= notice %></p>
 
     <%= yield %>
@@ -97,6 +97,6 @@
     </div>
     </div>
       </div>
-     </div>
+     </main>
   </body>
 </html>
