--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3">
       <%= render 'users/user', user: @user %>
-      <h2>New book</h2>
+      <h2 class="mt-3">New book</h2>
       <%= render 'books/book', book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
