--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
-<main>
+
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
       <%= render 'users/user', user: @user %>
-      <h2>New book</h2>
+      <h2 class="mt-3">New book</h2>
       <%= render 'books/book', book: @book %>
     </div>
     
@@ -28,4 +28,3 @@
     </div>
   </div>
 </div>
-</main>
