--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -21,7 +21,7 @@
     <i class="fas fa-user-cog"></i>
     <% end %>
  <% else %>
-  <%= link_to edit_user_path, class: "btn btn-outline-secondary btn-block" do %>
+  <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block" do %>
     <i class="fas fa-user-cog"></i>
     <% end %>
  <% end %>
