--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,17 +16,13 @@
           <th>Opinion</th>
   	   </thead>
   	   
-  	   <%= image_tag @user.get_profile_image(100,100) %>
-  	   <p><%= link_to edit_user_path(@user) %></p>
-  	   
-  	   
         <% @books.each do |book| %>
           <tr>
-            <td><%= image_tag @user.get_profile_image(100,100) %></td>
-            <td><%= link_to book_path(book.id) %></td>
+            <td>
+              <%= link_to image_tag(@user.get_profile_image(100,100)), user_path %>
             </td>
-              <td><%= book.body %></td>
-              <td><%= link_to book.title, book_path(book.id) %></td>
+            <td><%= link_to book.title, book_path(book.id) %></td>
+            <td><%= book.body %></td>
           </tr>
         <% end %>
       </table>
