--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,7 @@
     
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
-      <table class="table">
+      <table class="table table-hover table-inve">
         <tbody>
         <tr>
           <td><%= image_tag @user.get_profile_image(100,100) %>
@@ -34,9 +34,3 @@
     </div>
   </div>
 </div>
-Footer
-© 2023 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
-Security
