--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,7 +3,7 @@
 	<div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
 
 		<h1>welcome to
-		  <span class="fas fa-book" aria-hidden="true"></span>
+		<i class="fas fa-book"></i>
 		  <b>Bookers</b>
 		  !!
 		</h1>
